2006-08-29:
	- always enable the "main" component to make sure it is available
2006-08-18: 
	- sort the demoted software list
2006-07-31:
	- updated to edgy
	- uploadedd
2006-05-31: 
	- fix bug in the free space calculation (#47092)
	- updated ReleaseAnnouncement
	- updated translations
	- fix a missing bindtextdomain
	- fix a incorrect ngettext usage
	- added quirks handler to fix nvidia-glx issue (#47017)
          Thanks to the amazing Kiko for helping improve this!
2006-05-24: 
	- if the initial "update()" fails, just exit, don't try
          to restore the old sources.list (nothing was modified yet)
          Ubuntu: #46712
	- fix a bug in the sourcesList rewriting (ubuntu: #46245)
	- expand the terminal when no libgnome2-perl is installed
          because debconf might want to ask questions (ubuntu: #46214)
	- disable the breezy cdrom source to make removal of demoted
	  packages work properly (ubuntu: #46336)
	- translations updated from rosetta
	- fixed a bug in the demotions calculation (ubuntu: #46245)
	- typos fixed and translations unfuzzied (ubuntu: #46792,#46464)
	- upload
2006-05-12: 
	- space checking improved (ubuntu: #43948)
        - show software that was demoted from main -> universe 
        - improve the remaining time reporting
        - translation updates
	- upload
2006-05-09: 
        - upload
2006-05-08: 
	- fix error when asking for media-change (ubuntu: 43442,43728)
2006-05-02: 
        - upload
2006-04-28:
        - add more sanity checking, if no valid mirror is found in the 
          sources.list ask for "dumb" rewrite
        - if nothing valid was found after a dumb rewrite, add official
          sources
        - don't report install TIMEOUT over and over in the log
        - report what package caused a install TIMEOUT
2006-04-27:
	- add a additonal sanity check after the rewriting of the sources.list
          (check for BaseMetaPkgs still in the cache)
        - on abort reopen() the cache to force writing a new 