@@ -6,7 +6,7 @@ View=DistUpgradeViewGtk
 [Distro]
 # the meta-pkgs we support
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, edubuntu-desktop, xubuntu-desktop
-BaseMetaPkgs=ubuntu-base
+BaseMetaPkgs=ubuntu-minimal
 PostUpgradePurge=xorg-common
 Demotions=demoted.cfg
 
