@@ -1,5 +1,7 @@
 2006-08-29:
 	- always enable the "main" component to make sure it is available
+	- add download estimate
+	- add --cdrom switch to make cdrom based dist-upgrades possible
 2006-08-18: 
 	- sort the demoted software list
 2006-07-31:
